# openflow

./: .gitignore  LICENSE  README.md  claude-flow.config.json  cli.mjs  package-lock.json  package.json  version.json
.agents/: config.toml
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.github/workflows/: desktop-build.yml  release.yml  test-macos-hooks.yml
.swarm/: state.json
_deprecated-desktop-tauri/: Cargo.toml  README.md  tauri.conf.json
_deprecated-desktop-tauri/icons/: icon.icns
_deprecated-desktop-tauri/src/: main.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop-electron/: .gitignore  package-lock.json  package.json
desktop-electron/scripts/: build.mjs
desktop-electron/src/: crypto-store.ts  main.ts  (+3 more)
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/src/speech/: mod.rs
hooks/: on-tool-use.sh
openclaw-skills/: octoally_research_session.ts  research_claude.ts  research_codex.ts
project-docs/: README_manifest.md  milestone0_openclaw_spec.md  milestone0_openclaw_swarm_tasks.yaml  phase0_prd_architecture_consolidated.md  speckit-tasks.md
scripts/: build-archive.sh  dev.sh  install.sh  release.sh  ruflo-run.sh  uninstall.sh  update.sh
server/: package-lock.json  package.json
(+107 files in other folders)
