[package]
name = "openflow-desktop"
version = "0.1.0"
edition = "2021"
description = "OpenFlow desktop app with system tray"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Speech-to-text
whisper-rs = "0.12"
cpal = "0.15"
dirs = "6"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "macros"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
